--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,14 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
+scikit-learn = "1.1.2"
+matplotlib = "3.6.0rc1"
+seaborn = "0.12.0"
+pot = "0.8.2"
+rpy2 = "3.5.10"
+pydiffmap = "0.2.0.1"
+networkx = "2.8.8"
+tqdm = "4.64.1"
 
 
 [build-system]
