--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,6 +13,7 @@ build:
     - autoconf
     - automake
     - libsuitesparse-dev
+    - r-base
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
