--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "scaccordion"
-version = "0.1.8.8"
+version = "0.1.9.9"
 description = ""
 authors = ["James Nagai <james.nagai@gmail.com>"]
 readme = "README.md"
@@ -12,8 +12,8 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.9"
 scikit-learn = "1.1.2"
-matplotlib = "3.6.0rc1"
-seaborn = "0.12.0"
+matplotlib = "3.8.3"
+seaborn = "0.13.2"
 pot = "0.8.2"
 rpy2 = "3.5.10"
 pydiffmap = "0.2.0.1"
