--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "scaccordion"
-version = "0.2.0.1"
+version = "0.2.0.2"
 description = ""
 authors = ["James Nagai <james.nagai@gmail.com>"]
 readme = "README.md"
@@ -12,17 +12,19 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.9"
 scikit-learn = "1.1.2"
-matplotlib = "3.8.3"
+matplotlib = "^3.9.1"
 seaborn = "0.13.2"
-pot = "0.8.2"
+pot = "^0.9.4"
 rpy2 = "3.5.10"
 pydiffmap = "0.2.0.1"
-networkx = "2.8.8"
-tqdm = "4.64.1"
+networkx = "^3.3"
+tqdm = "4.66.5"
 tables = "^3.9.1"
 skimpy = "^0.0.14"
 phate = "^1.0.11"
 conorm = "^1.2.0"
+scipy = "^1.6.0"
+numpy="^1.24"
 
 
 [build-system]
