--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "scaccordion"
-version = "0.2.0.5"
+version = "0.2.1.5"
 description = ""
 authors = ["James Nagai <james.nagai@gmail.com>"]
 readme = "README.md"
@@ -11,7 +11,7 @@ include = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-scikit-learn = "1.1.2"
+scikit-learn = "1.5.2"
 matplotlib = "^3.9.1"
 seaborn = "0.13.2"
 pot = "^0.9.4"
@@ -25,7 +25,7 @@ phate = "^1.0.11"
 conorm = "^1.2.0"
 scipy = "^1.6.0"
 numpy="^1.24"
-
+genieclust="^1.1.5"
 
 [build-system]
 requires = ["poetry-core"]
