--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ phate = "^1.0.11"
 conorm = "^1.2.0"
 scipy = "^1.6.0"
 numpy="^1.24"
-genieclust="^1.1.5"
+genieclust="1.1.5"
 
 [build-system]
 requires = ["poetry-core"]
