--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,11 @@ include = [
     { path = "data/"},
 ]
 
-license = { text = "MIT" }
-readme = "README.md"
-requires-python = ">=3.10"
 
 [tool.poetry.dependencies]
 scikit-learn = "1.5.2"
-matplotlib = "^3.9.1i"
+matplotlib = "^3.9.1"
+python = "^3.10"
 seaborn = "0.13.2"
 pot = "^0.9.4"
 rpy2 = "3.5.10"
