--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ conorm = "1.2.0"
 scipy = "^1.6.0"
 numpy="^1.24"
 genieclust="1.1.5"
+kmedoids = "^0.5.3.1"
 
 [build-system]
 requires = ["poetry-core"]
